Update JDK modules